--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,12 +18,12 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.8,<3.12
-    - setuptools >=62.6,<66
+    - python >=3.8
+    - setuptools >=62.6,<70
     - setuptools-scm >=6.2,<8
   run:
-    - aiohttp >=3.6.0,<3.9.0
-    - python >=3.8,<3.12
+    - python >=3.8
+    - aiohttp >=3.6.0,<4.0
     - typing_extensions >=4,<5
 
 test:
