--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,12 @@ requirements:
   host:
     - pip
     - python {{ python_min }}
-    - setuptools >=62.6,<70
-    - setuptools-scm >=6.2,<8
+    - setuptools >=62.6,<=80.9.0
+    - setuptools-scm >=9.2,<=9.2.2
   run:
     - python >={{ python_min }}
     - aiohttp >=3.6.0,<4.0
-    - typing_extensions >=4,<5
+    - typing_extensions >=4.12.0,<5
 
 test:
   imports:
